# scroller

./: CODE_OF_CONDUCT.md
server/: Cargo.toml
server/src/: main.rs
web/: index.html  style.css
web/assets/: site.webmanifest
web/script/: grid.js  main.js  pinkness.js  scroll.js
