[package]
name = "server"
version = "0.1.0"
authors = ["Developer In Red <developer.in.red@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = { version = "3" }
actix-service = "2.0.0"
futures = "0.3.14"
env_logger = "0.8.3"
